[package]
name = "screenshot"
version = "0.1.0"
edition = "2021"

[dependencies]
arma-rs = "1.12.1"
image = "0.25.10"
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }


[lib]
name = "screenshot"
crate-type = ["cdylib"]
